Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34066

ASSERT: "QLatin1String(uri) == QLatin1String("QtWebKit")" in file plugin.cpp, line 47

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.2.1
    • 5.2.0 Alpha
    • None
    • Windows MSVC 2010 and 2012, 64 and 32 bit, ANGLE and OpenGL
    • 27f087d120c9a254ea81d89104d6d12c744987e2

      Open creator, try to launch youtubeview example -> Error (see screenshot.png).
      Application output:

      Starting D:\work\QT\Offline\520\5.2.0-beta1\msvc2012_64\examples\webkitqml\build-youtubeview-Desktop_Qt_5_2_0_MSVC2012_64bit-Debug\debug\youtubeview.exe...
      ASSERT: "QLatin1String(uri) == QLatin1String("QtWebKit")" in file plugin.cpp, line 47

        1. screenshot.png
          40 kB
          Jani Heikkinen
        For Gerrit Dashboard: QTBUG-34066
        # Subject Branch Project Status CR V

            allan.jensen Allan Sandfeld Jensen
            janihe Jani Heikkinen
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes