Remove superfluous assert from WebKitQmlPlugin::initializeEngine

The uri parameter is unused in this method and the ones called by it,
so it should not be asserted on.

Task-number: QTBUG-34066
Change-Id: I184fbad3e6e3d4786b4cc4e9f768f1c006309295
Reviewed-by: Jocelyn Turcotte <jocelyn.turcotte@digia.com>