Source/WebKit/qt/declarative/plugin.cpp
@@ -44,7 +44,7 @@ public:
 #if defined(HAVE_WEBKIT2)
     virtual void initializeEngine(QQmlEngine* engine, const char* uri)
     {
-        Q_ASSERT(QLatin1String(uri) == QLatin1String("QtWebKit"));
+        Q_UNUSED(uri);
         engine->addImageProvider(QLatin1String("webicon"), new QWebIconImageProvider);
     }
 #endif
